Track version in build file, build from master

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,14 +1,17 @@
 language: generic
 sudo: required
 services:
-  - docker
+- docker
 
 env:
+  global:
   - IMG_NAME="docker.io/mattsch/fedora-radarr"
-script:
-  - 'docker login -u "$D_U" -p "$D_P"'
-  - 'docker build --build-arg upstream_tag=${TRAVIS_TAG} -t ${IMG_NAME}:${TRAVIS_TAG/v} -t ${IMG_NAME}:latest .'
-  - 'docker push ${IMG_NAME}:${TRAVIS_TAG/v}'
-  - 'docker push ${IMG_NAME}:latest'
+  - VER="v0.2.0.995"
 
-if: tag IS present
+script:
+- 'docker login -u "$D_U" -p "$D_P"'
+- 'docker build --build-arg upstream_tag=${VER} -t ${IMG_NAME}:${VER/v} -t ${IMG_NAME}:latest .'
+- 'docker push ${IMG_NAME}:${VER/v}'
+- 'docker push ${IMG_NAME}:latest'
+
+if: branch = master
